--- a/_layouts/head.html
+++ b/_layouts/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width-device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="https://duckydares.github.io/favicon.ico">
   {% seo %}
-  <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
