Late push for this months ONLY updates :(

--- a/_includes/spotify_album.html
+++ b/_includes/spotify_album.html
@@ -2,6 +2,8 @@
     <iframe src="https://open.spotify.com/embed/album/{{ include.id }}" 
         frameborder="0" 
         allowtransparency="true" 
-        allow="encrypted-media">
+        allow="encrypted-media"
+        width="100vw"
+        height="50vw">
     </iframe>
 </div>
