--- a/_includes/spotify_playlist.html
+++ b/_includes/spotify_playlist.html
@@ -2,6 +2,12 @@
     <iframe src="https://open.spotify.com/embed/user/spotify/playlist/{{ include.id }}" 
         frameborder="0" 
         allowtransparency="true" 
-        allow="encrypted-media">
+        allow="encrypted-media"
+        width="100%"
+        class="spotify-frame">
     </iframe>
 </div>
+
+<script type="text/javascript" language="javascript"> 
+    $('.myIframe').css('height', $(window).height()+'px');
+</script>
